{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 13,
  "lineage": "c3b51069-17bb-e1fe-6dbb-2222e2a641f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BackBenchers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:339712938001:instance/i-038af2bed474a50b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038af2bed474a50b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "BackBenchers",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01137f3b5506faaf7",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-32-197-219-10.compute-1.amazonaws.com",
            "public_ip": "32.197.219.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f430331f224be4b7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7f4678254ecd2e4",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-instance",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-instance",
              "Project": "BackBenchers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3e18b6ec622b216"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.BackBenchers_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712938001:internet-gateway/igw-0d50a2806db6eb9a4",
            "id": "igw-0d50a2806db6eb9a4",
            "owner_id": "339712938001",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-igw",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-igw",
              "Project": "BackBenchers"
            },
            "vpc_id": "vpc-066227b9de41868db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712938001:route-table/rtb-0f98ead5123922645",
            "id": "rtb-0f98ead5123922645",
            "owner_id": "339712938001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d50a2806db6eb9a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-public-rt",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-public-rt",
              "Project": "BackBenchers"
            },
            "timeouts": null,
            "vpc_id": "vpc-066227b9de41868db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022368065e50b01bf",
            "route_table_id": "rtb-0f98ead5123922645",
            "subnet_id": "subnet-0e7f4678254ecd2e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BackBenchers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712938001:security-group/sg-0b3e18b6ec622b216",
            "description": "Allow SSH, HTTP, HTTPS, and Kubernetes NodePort traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3e18b6ec622b216",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BackBenchers-sg",
            "name_prefix": "",
            "owner_id": "339712938001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-sg",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-sg",
              "Project": "BackBenchers"
            },
            "timeouts": null,
            "vpc_id": "vpc-066227b9de41868db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712938001:subnet/subnet-0e7f4678254ecd2e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f4678254ecd2e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712938001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-public-subnet",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-public-subnet",
              "Project": "BackBenchers"
            },
            "vpc_id": "vpc-066227b9de41868db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712938001:vpc/vpc-066227b9de41868db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcb05f753187f19b",
            "default_route_table_id": "rtb-07b96a951b10a848c",
            "default_security_group_id": "sg-0a9eb06f2cc878cf8",
            "dhcp_options_id": "dopt-0be9bc04aa3ada76f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066227b9de41868db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b96a951b10a848c",
            "owner_id": "339712938001",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-vpc",
              "Project": "BackBenchers"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "BackBenchers-vpc",
              "Project": "BackBenchers"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}